// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Brick /> should render a basic hint wrapper 1`] = `
<styled.span
  data-component-type="hint_wrapper"
>
  <Tooltip
    effect="solid"
    iconColour="#424F5C"
    message="Never trust a cat"
    place="top"
    withIcon={false}
  >
    Hover me for a tip :)
  </Tooltip>
</styled.span>
`;

exports[`<Brick /> should render a hint wrapper around a brick 1`] = `
<styled.span
  data-component-type="hint_wrapper"
>
  <Tooltip
    effect="solid"
    iconColour="#424F5C"
    message="Never trust a cat"
    place="top"
    withIcon={false}
  >
    <Brick
      color="neutral"
      typographyType="body"
    >
      Hover me for a tip :)
    </Brick>
  </Tooltip>
</styled.span>
`;
